@@ -4,13 +4,14 @@ import com.alkywallet.entity.Usuario;
 import com.alkywallet.repository.UsuarioRepository;
 import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.NullMarked;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Implementación de UserDetailsService: busca al Usuario en la base de datos
@@ -31,7 +32,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new User(
                 usuario.getEmail(),
                 usuario.getPassword(),
-                Collections.emptyList() // sin roles todavía, tu entidad no tiene ese campo aún
+                List.of(new SimpleGrantedAuthority("ROLE_" + usuario.getRol().name()))
         );
     }
 }
